<resources>
    <string name="app_name">Workflow</string>


    <!--PROFILES SCREEN-->
    <string name="MisDatosTXT">PROFILE</string>
    <string name="UidDato">UID</string>
    <string name="NombresDato">NAMES</string>
    <string name="ApellidosDato">LASTNAMES</string>
    <string name="CorreoDato">EMAIL</string>
    <string name="EdadDato">AGE</string>
    <string name="DireccionDato">DIRECTION STREET</string>
    <string name="TelefonoDato">PHONE</string>
    <string name="Actualizar">UPDATE DATA</string>
    <string name="ActualizarPass">UPDATE CREDENTIAL</string>



</resources>