<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".profiles.Profile_screen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/MisDatosTXT"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <!--Imagen del usuario-->
        <ImageView
            android:id="@+id/ImagenProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/UidDato"
            android:text="@string/UidDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/NombresDato"
            android:text="@string/NombresDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/ApellidosDato"
            android:text="@string/ApellidosDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/CorreoDato"
            android:text="@string/CorreoDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/EdadDato"
            android:text="@string/EdadDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/DireccionDato"
            android:text="@string/DireccionDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TelefonoDato"
            android:text="@string/TelefonoDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/Actualizar"
            android:text="@string/Actualizar"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_launcher_background"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:drawableStart="@drawable/update_icon"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/ActualizarPass"
            android:text="@string/ActualizarPass"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_launcher_background"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:drawableStart="@drawable/update_pass"
            android:drawablePadding="15dp"
            android:padding="15dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>



    </LinearLayout>
</ScrollView>